--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+        classpath 'com.google.zxing:core:3.2.1'
         classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
