--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.2.50'
+    //ext.kotlin_version = '1.0.6'
+    ext.android_plugin_version = "2.2.3"
     repositories {
         google()
         jcenter()
