--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     kapt "com.android.databinding:compiler:3.1.4"
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
 }
