--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,14 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
+    buildToolsVersion '23.0.1'
     defaultConfig {
         applicationId "undefined.dsm.getterra"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -47,6 +49,9 @@ dependencies {
     kapt "com.android.databinding:compiler:3.1.4"
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    //qrcode
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+    implementation 'com.android.support:multidex:1.0.1'
 }
 kotlin {
     experimental {
