--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '23.0.1'
+//    buildToolsVersion '23.0.3'
     defaultConfig {
         applicationId "undefined.dsm.getterra"
         minSdkVersion 21
@@ -24,12 +24,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    /*defaultConfig {
+        multiDexEnabled true
+    }*/
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:animated-vector-drawable:28.0.0'
+//    implementation 'com.android.support:support-v4:23.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -45,7 +50,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     //qrcode
-    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+//    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+//    implementation 'com.google.zxing:core:3.3.0'
+//    implementation 'com.android.support:multidex:1.0.1'
 }
 kotlin {
     experimental {
